# simple

./: AUTHORS  BUILD.sh  CMakeLists.txt  LICENSE  Makefile  README.md  build_unix.sh  build_vs.bat  build_web.sh  build_xcode.sh  todo.txt
res/: .main.lua.swp  main.lua  main.lua~  readme.txt  simple_web.data  simple_web.html  simple_web.html.mem  simple_web.js
res/res/: main.lua
src/: .main.cpp.swp  main.cpp
src/graphics/: .batch2d.cpp.swp  .default_shaders.cpp.swp  .default_shaders.h.swp  .font.cpp.swp  .font.h.swp  .gl_graphics.cpp.swp  .gl_graphics.h.swp  .mesh.cpp.swp  .mesh.h.swp  .shader.cpp.swp  .shader.h.swp  .texture2D.cpp.swp  .texture2D.h.swp  batch2d.cpp  batch2d.h  camera.cpp  camera.h  default_shaders.cpp  default_shaders.h  definitions.h  font.cpp  font.h  gl_graphics.cpp  gl_graphics.h  mesh.cpp  mesh.h  object3D.cpp  object3D.h  shader.cpp  shader.h  sprite2d.cpp  sprite2d.h  texture2D.cpp  texture2D.h
src/input/: .keyboard.cpp.swp  .pointer.cpp.swp  keyboard.cpp  keyboard.h  pointer.cpp  pointer.h
src/maths/: color.h  mat3.h  mat4.h  matrix3.h  matrix4.cpp  matrix4.h  vec2.h  vec3.h  vec4.h  vector2.h  vector3.h  vector4.h
src/shaders/: depth.frag  depth.vert  phong.frag  phong.vert
src/sound/: .ogg_player.cpp.swp  .openal_contex.cpp.swp  ogg_player.cpp  ogg_player.h  openal_contex.cpp  openal_contex.cpp~  openal_context.h  openal_context.h~
src/utils/: .core.cpp.swp  .core.h.swp  .definitions.h.swp  .lua_lang_init.cpp.swp  .lua_lang_init.h.swp  .lua_lang_utils.h.swp  .register_graphics.cpp.swo  .register_graphics.cpp.swp  .register_graphics.h.swp  .register_timer.cpp.swp  .register_window.cpp.swp  core.cpp  core.h  definitions.h  file.cpp  file.h  file_system.cpp  file_system.h  file_system.h~  lua_lang_init.cpp  lua_lang_init.h  lua_lang_init.h~  lua_lang_utils.h  lua_lang_utils.h~  register_audio.cpp  register_audio.h  register_graphics.cpp  register_graphics.cpp~  register_graphics.h  register_graphics.h~  register_input.cpp  register_input.cpp~  register_input.h  register_input.h~  register_math.cpp  register_math.cpp~  register_math.h  register_math.h~  register_timer.cpp  register_timer.cpp~  (+8 more)
src/window/: glfw_window.cpp  glfw_window.h  sdl_window.cpp  sdl_window.h
